// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoCard renders 1`] = `
<body>
  <div>
    <div
      class="sc-cSHVUG fZYACh"
    >
      <div
        class="rec rec-carousel-wrapper sc-jzJRlG eIqZvH sc-EHOje eOvqeq"
      >
        <div
          class="rec rec-carousel sc-ifAKCX kQtsWC"
          style="height: 0px;"
        >
          <div
            class="rec rec-slider-container sc-htpNat iDfeOS"
          >
            <div
              class="rec rec-slider sc-bxivhb ktZOgd"
              style="transition: all 500ms ease; left: 0px;"
            >
              <div
                class="rec rec-swipable"
                style="display: flex; flex-direction: row;"
              >
                <div
                  class="rec rec-carousel-item rec-carousel-item-0 rec-carousel-item-visible"
                >
                  <div
                    class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                    id="0"
                    style="width: 0px; padding: 0px 0px 0px 0px;"
                  >
                    <div
                      class="sc-kgoBCf hmwhTM"
                      tabindex="0"
                    >
                      <div
                        class="sc-ckVGcZ kInrAI"
                      >
                        <img
                          class="sc-kGXeez iiZPJL"
                          src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F46cebe30-c82d-11eb-b6f5-fed739e7c1ca.jpg?crop=6676%2C3755%2C65%2C707&resize=1180"
                        />
                      </div>
                      <div
                        class="sc-dnqmqq laQCFw"
                      >
                        Birch
                      </div>
                      <div
                        class="sc-iwsKbI bMDHmH"
                      >
                        Hotel of the year. Offering everything from pottery workshops to sourdough masterclasses, this trendy newcomer is doing things differently
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="rec rec-carousel-item rec-carousel-item-1 rec-carousel-item-hidden rec-carousel-item-next"
                >
                  <div
                    class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                    id="1"
                    style="width: 0px; padding: 0px 0px 0px 0px;"
                  >
                    <div
                      class="sc-kgoBCf hmwhTM"
                      tabindex="-1"
                    >
                      
                      <div
                        class="sc-dnqmqq laQCFw"
                      >
                        Mitre
                      </div>
                      <div
                        class="sc-iwsKbI bMDHmH"
                      >
                        Regional winner: London. Right on the Thames, this swish new inn delivers sweeping river views and royal history
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="rec rec-carousel-item rec-carousel-item-2 rec-carousel-item-hidden"
                >
                  <div
                    class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                    id="2"
                    style="width: 0px; padding: 0px 0px 0px 0px;"
                  >
                    <div
                      class="sc-kgoBCf hmwhTM"
                      tabindex="-1"
                    >
                      
                      <div
                        class="sc-dnqmqq laQCFw"
                      >
                        Subtitle 1
                      </div>
                      <div
                        class="sc-iwsKbI bMDHmH"
                      >
                        Copy text 1
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="rec rec-carousel-item rec-carousel-item-3 rec-carousel-item-hidden"
                >
                  <div
                    class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                    id="3"
                    style="width: 0px; padding: 0px 0px 0px 0px;"
                  >
                    <div
                      class="sc-kgoBCf hmwhTM"
                      tabindex="-1"
                    >
                      
                      <div
                        class="sc-dnqmqq laQCFw"
                      >
                        Subtitle 2
                      </div>
                      <div
                        class="sc-iwsKbI bMDHmH"
                      >
                        Copy text 2
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="rec rec-carousel-item rec-carousel-item-4 rec-carousel-item-hidden"
                >
                  <div
                    class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                    id="4"
                    style="width: 0px; padding: 0px 0px 0px 0px;"
                  >
                    <div
                      class="sc-kgoBCf hmwhTM"
                      tabindex="-1"
                    >
                      
                      <div
                        class="sc-dnqmqq laQCFw"
                      >
                        Subtitle 3
                      </div>
                      <div
                        class="sc-iwsKbI bMDHmH"
                      >
                        Copy text 3
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="rec rec-carousel-item rec-carousel-item-5 rec-carousel-item-hidden"
                >
                  <div
                    class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                    id="5"
                    style="width: 0px; padding: 0px 0px 0px 0px;"
                  >
                    <div
                      class="sc-kgoBCf hmwhTM"
                      tabindex="-1"
                    >
                      
                      <div
                        class="sc-dnqmqq laQCFw"
                      >
                        Subtitle 4
                      </div>
                      <div
                        class="sc-iwsKbI bMDHmH"
                      >
                        Copy text 4
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-kAzzGY fCpRvT"
        >
          <div
            class="sc-chPdSV cxUg"
          >
            <div
              class="sc-dxgOiQ kyeaEO"
            >
              Best places to stay
            </div>
            <div
              class="sc-gZMcBi ehctmQ"
            >
              <div
                class="sc-htoDjs bGCkXx"
              >
                The Sunday Times best British hotels
              </div>
              <div
                class="sc-gqjmRU dRclRz"
              >
                <button
                  class="sc-VigVT cxIdcK"
                  data-testid="Previous button"
                  disabled=""
                >
                  <svg
                    height="14px"
                    width="10px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.29 12.956L3.903 7.049 7.289.97h-.96L.697 7.013l5.632 5.943z"
                      fill-rule="nonzero"
                    />
                  </svg>
                </button>
                <div
                  class="sc-jTzLTM fwzogc"
                >
                  <div
                    class="sc-fjdhpX ieeIfc"
                    data-testid="Page Indicator"
                  />
                  <div
                    class="sc-fjdhpX jcRAQq"
                    data-testid="Page Indicator"
                  />
                  <div
                    class="sc-fjdhpX jcRAQq"
                    data-testid="Page Indicator"
                  />
                </div>
                <button
                  class="nextBtn sc-VigVT ksrZCo"
                  data-testid="Next Button"
                >
                  <svg
                    height="14px"
                    width="10px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.29 12.956L3.903 7.049 7.289.97h-.96L.697 7.013l5.632 5.943z"
                      fill-rule="nonzero"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`InfoCard renders no image 1`] = `
<body>
  <div>
    <div
      class="sc-cSHVUG fZYACh"
    >
      <div
        class="rec rec-carousel-wrapper sc-jzJRlG eIqZvH sc-EHOje eOvqeq"
      >
        <div
          class="rec rec-carousel sc-ifAKCX kQtsWC"
          style="height: 0px;"
        >
          <div
            class="rec rec-slider-container sc-htpNat iDfeOS"
          >
            <div
              class="rec rec-slider sc-bxivhb ktZOgd"
              style="transition: all 500ms ease; left: 0px;"
            >
              <div
                class="rec rec-swipable"
                style="display: flex; flex-direction: row;"
              >
                <div
                  class="rec rec-carousel-item rec-carousel-item-0 rec-carousel-item-visible"
                >
                  <div
                    class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                    id="0"
                    style="width: 0px; padding: 0px 0px 0px 0px;"
                  >
                    <div
                      class="sc-kgoBCf hmwhTM"
                      tabindex="0"
                    >
                      <div
                        class="sc-ckVGcZ kInrAI"
                      >
                        <img
                          class="sc-kGXeez iiZPJL"
                          src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F46cebe30-c82d-11eb-b6f5-fed739e7c1ca.jpg?crop=6676%2C3755%2C65%2C707&resize=1180"
                        />
                      </div>
                      <div
                        class="sc-dnqmqq laQCFw"
                      >
                        Birch
                      </div>
                      <div
                        class="sc-iwsKbI bMDHmH"
                      >
                        Hotel of the year. Offering everything from pottery workshops to sourdough masterclasses, this trendy newcomer is doing things differently
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="rec rec-carousel-item rec-carousel-item-1 rec-carousel-item-hidden rec-carousel-item-next"
                >
                  <div
                    class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                    id="1"
                    style="width: 0px; padding: 0px 0px 0px 0px;"
                  >
                    <div
                      class="sc-kgoBCf hmwhTM"
                      tabindex="-1"
                    >
                      
                      <div
                        class="sc-dnqmqq laQCFw"
                      >
                        Mitre
                      </div>
                      <div
                        class="sc-iwsKbI bMDHmH"
                      >
                        Regional winner: London. Right on the Thames, this swish new inn delivers sweeping river views and royal history
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="rec rec-carousel-item rec-carousel-item-2 rec-carousel-item-hidden"
                >
                  <div
                    class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                    id="2"
                    style="width: 0px; padding: 0px 0px 0px 0px;"
                  >
                    <div
                      class="sc-kgoBCf hmwhTM"
                      tabindex="-1"
                    >
                      
                      <div
                        class="sc-dnqmqq laQCFw"
                      >
                        Subtitle 1
                      </div>
                      <div
                        class="sc-iwsKbI bMDHmH"
                      >
                        Copy text 1
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="rec rec-carousel-item rec-carousel-item-3 rec-carousel-item-hidden"
                >
                  <div
                    class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                    id="3"
                    style="width: 0px; padding: 0px 0px 0px 0px;"
                  >
                    <div
                      class="sc-kgoBCf hmwhTM"
                      tabindex="-1"
                    >
                      
                      <div
                        class="sc-dnqmqq laQCFw"
                      >
                        Subtitle 2
                      </div>
                      <div
                        class="sc-iwsKbI bMDHmH"
                      >
                        Copy text 2
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="rec rec-carousel-item rec-carousel-item-4 rec-carousel-item-hidden"
                >
                  <div
                    class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                    id="4"
                    style="width: 0px; padding: 0px 0px 0px 0px;"
                  >
                    <div
                      class="sc-kgoBCf hmwhTM"
                      tabindex="-1"
                    >
                      
                      <div
                        class="sc-dnqmqq laQCFw"
                      >
                        Subtitle 3
                      </div>
                      <div
                        class="sc-iwsKbI bMDHmH"
                      >
                        Copy text 3
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="rec rec-carousel-item rec-carousel-item-5 rec-carousel-item-hidden"
                >
                  <div
                    class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                    id="5"
                    style="width: 0px; padding: 0px 0px 0px 0px;"
                  >
                    <div
                      class="sc-kgoBCf hmwhTM"
                      tabindex="-1"
                    >
                      
                      <div
                        class="sc-dnqmqq laQCFw"
                      >
                        Subtitle 4
                      </div>
                      <div
                        class="sc-iwsKbI bMDHmH"
                      >
                        Copy text 4
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-kAzzGY fCpRvT"
        >
          <div
            class="sc-chPdSV cxUg"
          >
            <div
              class="sc-dxgOiQ kyeaEO"
            >
              Best places to stay
            </div>
            <div
              class="sc-gZMcBi ehctmQ"
            >
              <div
                class="sc-htoDjs bGCkXx"
              >
                The Sunday Times best British hotels
              </div>
              <div
                class="sc-gqjmRU dRclRz"
              >
                <button
                  class="sc-VigVT cxIdcK"
                  data-testid="Previous button"
                  disabled=""
                >
                  <svg
                    height="14px"
                    width="10px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.29 12.956L3.903 7.049 7.289.97h-.96L.697 7.013l5.632 5.943z"
                      fill-rule="nonzero"
                    />
                  </svg>
                </button>
                <div
                  class="sc-jTzLTM fwzogc"
                >
                  <div
                    class="sc-fjdhpX ieeIfc"
                    data-testid="Page Indicator"
                  />
                  <div
                    class="sc-fjdhpX jcRAQq"
                    data-testid="Page Indicator"
                  />
                  <div
                    class="sc-fjdhpX jcRAQq"
                    data-testid="Page Indicator"
                  />
                </div>
                <button
                  class="nextBtn sc-VigVT ksrZCo"
                  data-testid="Next Button"
                >
                  <svg
                    height="14px"
                    width="10px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.29 12.956L3.903 7.049 7.289.97h-.96L.697 7.013l5.632 5.943z"
                      fill-rule="nonzero"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`InfoCard should render the initial error state correctly 1`] = `<DocumentFragment />`;

exports[`InfoCard should render the initial loading state correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-kpOJdX dgGJxc"
  >
    <div>
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`InfoCard should render the standard component 1`] = `
<DocumentFragment>
  <div
    class="sc-cSHVUG fZYACh"
  >
    <div
      class="rec rec-carousel-wrapper sc-jzJRlG eIqZvH sc-EHOje eOvqeq"
    >
      <div
        class="rec rec-carousel sc-ifAKCX kQtsWC"
        style="height: 0px;"
      >
        <div
          class="rec rec-slider-container sc-htpNat iDfeOS"
        >
          <div
            class="rec rec-slider sc-bxivhb ktZOgd"
            style="transition: all 500ms ease; left: 0px;"
          >
            <div
              class="rec rec-swipable"
              style="display: flex; flex-direction: row;"
            >
              <div
                class="rec rec-carousel-item rec-carousel-item-0 rec-carousel-item-visible"
              >
                <div
                  class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                  id="0"
                  style="width: 0px; padding: 0px 0px 0px 0px;"
                >
                  <div
                    class="sc-kgoBCf hmwhTM"
                    tabindex="0"
                  >
                    <div
                      class="sc-ckVGcZ kInrAI"
                    >
                      <img
                        class="sc-kGXeez iiZPJL"
                        src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F46cebe30-c82d-11eb-b6f5-fed739e7c1ca.jpg?crop=6676%2C3755%2C65%2C707&resize=1180"
                      />
                    </div>
                    <div
                      class="sc-dnqmqq laQCFw"
                    >
                      Birch
                    </div>
                    <div
                      class="sc-iwsKbI bMDHmH"
                    >
                      Hotel of the year. Offering everything from pottery workshops to sourdough masterclasses, this trendy newcomer is doing things differently
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="rec rec-carousel-item rec-carousel-item-1 rec-carousel-item-hidden rec-carousel-item-next"
              >
                <div
                  class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                  id="1"
                  style="width: 0px; padding: 0px 0px 0px 0px;"
                >
                  <div
                    class="sc-kgoBCf hmwhTM"
                    tabindex="-1"
                  >
                    <div
                      class="sc-dnqmqq laQCFw"
                    >
                      Mitre
                    </div>
                    <div
                      class="sc-iwsKbI bMDHmH"
                    >
                      Regional winner: London. Right on the Thames, this swish new inn delivers sweeping river views and royal history
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="rec rec-carousel-item rec-carousel-item-2 rec-carousel-item-hidden"
              >
                <div
                  class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                  id="2"
                  style="width: 0px; padding: 0px 0px 0px 0px;"
                >
                  <div
                    class="sc-kgoBCf hmwhTM"
                    tabindex="-1"
                  >
                    <div
                      class="sc-dnqmqq laQCFw"
                    >
                      Subtitle 1
                    </div>
                    <div
                      class="sc-iwsKbI bMDHmH"
                    >
                      Copy text 1
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="rec rec-carousel-item rec-carousel-item-3 rec-carousel-item-hidden"
              >
                <div
                  class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                  id="3"
                  style="width: 0px; padding: 0px 0px 0px 0px;"
                >
                  <div
                    class="sc-kgoBCf hmwhTM"
                    tabindex="-1"
                  >
                    <div
                      class="sc-dnqmqq laQCFw"
                    >
                      Subtitle 2
                    </div>
                    <div
                      class="sc-iwsKbI bMDHmH"
                    >
                      Copy text 2
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="rec rec-carousel-item rec-carousel-item-4 rec-carousel-item-hidden"
              >
                <div
                  class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                  id="4"
                  style="width: 0px; padding: 0px 0px 0px 0px;"
                >
                  <div
                    class="sc-kgoBCf hmwhTM"
                    tabindex="-1"
                  >
                    <div
                      class="sc-dnqmqq laQCFw"
                    >
                      Subtitle 3
                    </div>
                    <div
                      class="sc-iwsKbI bMDHmH"
                    >
                      Copy text 3
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="rec rec-carousel-item rec-carousel-item-5 rec-carousel-item-hidden"
              >
                <div
                  class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                  id="5"
                  style="width: 0px; padding: 0px 0px 0px 0px;"
                >
                  <div
                    class="sc-kgoBCf hmwhTM"
                    tabindex="-1"
                  >
                    <div
                      class="sc-dnqmqq laQCFw"
                    >
                      Subtitle 4
                    </div>
                    <div
                      class="sc-iwsKbI bMDHmH"
                    >
                      Copy text 4
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-kAzzGY fCpRvT"
      >
        <div
          class="sc-chPdSV cxUg"
        >
          <div
            class="sc-dxgOiQ kyeaEO"
          >
            Best places to stay
          </div>
          <div
            class="sc-gZMcBi ehctmQ"
          >
            <div
              class="sc-htoDjs bGCkXx"
            >
              The Sunday Times best British hotels
            </div>
            <div
              class="sc-gqjmRU dRclRz"
            >
              <button
                class="sc-VigVT cxIdcK"
                data-testid="Previous button"
                disabled=""
              >
                <svg
                  height="14px"
                  width="10px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.29 12.956L3.903 7.049 7.289.97h-.96L.697 7.013l5.632 5.943z"
                    fill-rule="nonzero"
                  />
                </svg>
              </button>
              <div
                class="sc-jTzLTM fwzogc"
              >
                <div
                  class="sc-fjdhpX ieeIfc"
                  data-testid="Page Indicator"
                />
                <div
                  class="sc-fjdhpX jcRAQq"
                  data-testid="Page Indicator"
                />
                <div
                  class="sc-fjdhpX jcRAQq"
                  data-testid="Page Indicator"
                />
              </div>
              <button
                class="nextBtn sc-VigVT ksrZCo"
                data-testid="Next Button"
              >
                <svg
                  height="14px"
                  width="10px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.29 12.956L3.903 7.049 7.289.97h-.96L.697 7.013l5.632 5.943z"
                    fill-rule="nonzero"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InfoCard should render the wide component 1`] = `
<DocumentFragment>
  <div
    class="sc-cSHVUG QZnnk"
  >
    <div
      class="rec rec-carousel-wrapper sc-jzJRlG eIqZvH sc-EHOje eOvqeq"
    >
      <div
        class="rec rec-carousel sc-ifAKCX kQtsWC"
        style="height: 0px;"
      >
        <div
          class="rec rec-slider-container sc-htpNat iDfeOS"
        >
          <div
            class="rec rec-slider sc-bxivhb ktZOgd"
            style="transition: all 500ms ease; left: 0px;"
          >
            <div
              class="rec rec-swipable"
              style="display: flex; flex-direction: row;"
            >
              <div
                class="rec rec-carousel-item rec-carousel-item-0 rec-carousel-item-visible"
              >
                <div
                  class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                  id="0"
                  style="width: 0px; padding: 0px 0px 0px 0px;"
                >
                  <div
                    class="sc-kgoBCf hmwhTM"
                    tabindex="0"
                  >
                    <div
                      class="sc-ckVGcZ kInrAI"
                    >
                      <img
                        class="sc-kGXeez iiZPJL"
                        src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F46cebe30-c82d-11eb-b6f5-fed739e7c1ca.jpg?crop=6676%2C3755%2C65%2C707&resize=1180"
                      />
                    </div>
                    <div
                      class="sc-dnqmqq laQCFw"
                    >
                      Birch
                    </div>
                    <div
                      class="sc-iwsKbI bMDHmH"
                    >
                      Hotel of the year. Offering everything from pottery workshops to sourdough masterclasses, this trendy newcomer is doing things differently
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="rec rec-carousel-item rec-carousel-item-1 rec-carousel-item-hidden rec-carousel-item-next"
              >
                <div
                  class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                  id="1"
                  style="width: 0px; padding: 0px 0px 0px 0px;"
                >
                  <div
                    class="sc-kgoBCf hmwhTM"
                    tabindex="-1"
                  >
                    <div
                      class="sc-dnqmqq laQCFw"
                    >
                      Mitre
                    </div>
                    <div
                      class="sc-iwsKbI bMDHmH"
                    >
                      Regional winner: London. Right on the Thames, this swish new inn delivers sweeping river views and royal history
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="rec rec-carousel-item rec-carousel-item-2 rec-carousel-item-hidden"
              >
                <div
                  class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                  id="2"
                  style="width: 0px; padding: 0px 0px 0px 0px;"
                >
                  <div
                    class="sc-kgoBCf hmwhTM"
                    tabindex="-1"
                  >
                    <div
                      class="sc-dnqmqq laQCFw"
                    >
                      Subtitle 1
                    </div>
                    <div
                      class="sc-iwsKbI bMDHmH"
                    >
                      Copy text 1
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="rec rec-carousel-item rec-carousel-item-3 rec-carousel-item-hidden"
              >
                <div
                  class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                  id="3"
                  style="width: 0px; padding: 0px 0px 0px 0px;"
                >
                  <div
                    class="sc-kgoBCf hmwhTM"
                    tabindex="-1"
                  >
                    <div
                      class="sc-dnqmqq laQCFw"
                    >
                      Subtitle 2
                    </div>
                    <div
                      class="sc-iwsKbI bMDHmH"
                    >
                      Copy text 2
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="rec rec-carousel-item rec-carousel-item-4 rec-carousel-item-hidden"
              >
                <div
                  class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                  id="4"
                  style="width: 0px; padding: 0px 0px 0px 0px;"
                >
                  <div
                    class="sc-kgoBCf hmwhTM"
                    tabindex="-1"
                  >
                    <div
                      class="sc-dnqmqq laQCFw"
                    >
                      Subtitle 3
                    </div>
                    <div
                      class="sc-iwsKbI bMDHmH"
                    >
                      Copy text 3
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="rec rec-carousel-item rec-carousel-item-5 rec-carousel-item-hidden"
              >
                <div
                  class="sc-bwzfXH rec rec-item-wrapper dYWSjd"
                  id="5"
                  style="width: 0px; padding: 0px 0px 0px 0px;"
                >
                  <div
                    class="sc-kgoBCf hmwhTM"
                    tabindex="-1"
                  >
                    <div
                      class="sc-dnqmqq laQCFw"
                    >
                      Subtitle 4
                    </div>
                    <div
                      class="sc-iwsKbI bMDHmH"
                    >
                      Copy text 4
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-kAzzGY fCpRvT"
      >
        <div
          class="sc-chPdSV cxUg"
        >
          <div
            class="sc-dxgOiQ kyeaEO"
          >
            Best places to stay
          </div>
          <div
            class="sc-gZMcBi ehctmQ"
          >
            <div
              class="sc-htoDjs bGCkXx"
            >
              The Sunday Times best British hotels
            </div>
            <div
              class="sc-gqjmRU dRclRz"
            >
              <button
                class="sc-VigVT cxIdcK"
                data-testid="Previous button"
                disabled=""
              >
                <svg
                  height="14px"
                  width="10px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.29 12.956L3.903 7.049 7.289.97h-.96L.697 7.013l5.632 5.943z"
                    fill-rule="nonzero"
                  />
                </svg>
              </button>
              <div
                class="sc-jTzLTM fwzogc"
              >
                <div
                  class="sc-fjdhpX ieeIfc"
                  data-testid="Page Indicator"
                />
                <div
                  class="sc-fjdhpX jcRAQq"
                  data-testid="Page Indicator"
                />
              </div>
              <button
                class="nextBtn sc-VigVT ksrZCo"
                data-testid="Next Button"
              >
                <svg
                  height="14px"
                  width="10px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.29 12.956L3.903 7.049 7.289.97h-.96L.697 7.013l5.632 5.943z"
                    fill-rule="nonzero"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
